--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           </li>
           
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Activities</button>
+            <button class="navbar-link" data-nav-link>Profile</button>
           </li>
           <!--
           <li class="navbar-item">
@@ -198,12 +198,13 @@
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Community Service</h4>
-
+                <a href="#profile" class="internal-link">
                 <p class="service-item-text">
                   I love giving back to the community. I've been part of service projects such as the University of Cincinnati's 
                   International Food Drive, Swim with a Splash, and music events at senior centers and hospitals. I also designed a 
                   video for the nonprofit EMBRACE.
                 </p>
+              </a>
               </div>
 
             </li>
@@ -216,12 +217,13 @@
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Performing Arts</h4>
-
+                <a href="#profile" class="internal-link">
                 <p class="service-item-text">
                   I was selected twice for the OMEA District 13 Honor Orchestra, and made the Cincinnati Junior Strings Orchestra, which 
                   is the highest level for my grade. I am also a part of my school's orchestra, where I am playing in an 8th-grade class 
                   as a 7th grader.
                 </p>
+              </a>
               </div>
 
             </li>
@@ -234,12 +236,13 @@
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Sports</h4>
-
+                <a href="#profile" class="internal-link">
                 <p class="service-item-text">
                   I have played many sports in my life, but I consistently compete in swimming, basketball, and tennis. I currently hold 
                   the 3rd fastest 50 breaststroke time (AAA)  in Ohio and qualified for state for all events in the 2022-2023 Long 
                   Course season. I have also gotten AA and A times in both Long Course and Short Course seasons.
                 </p>
+              </a>
               </div>
 
             </li>
@@ -252,12 +255,13 @@
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Academics</h4>
-
+                <a href="#profile" class="internal-link">
                 <p class="service-item-text">
                   I am an active participant in both MATHCOUNTS and Science Bowl. I qualified for the state competition in MATHCOUNTS, 
                   even though I was a 6th grader competing against 7th and 8th graders. I also secured 99% or above in every subject in 
                   7th grade, an achievement I take pride in.
                 </p>
+              </a>
               </div>
 
             </li>
@@ -272,7 +276,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title" style="margin-bottom: 60px;">Activities </h3>
+          <h3 class="h3 service-title" style="margin-bottom: 60px;">Profile </h3>
 
           <ul class="service-list">
           
@@ -413,7 +417,7 @@
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
                     I've played basketball since I was 7 years old, and I wanted to be a basketball player when I grew up. I also enjoy 
-                    watching NBA games. My idol is Stephen Curry, and I admire him for his grit and determination. Despite being 
+                    watching NBA games. My role model is Stephen Curry, and I admire him for his grit and determination. Despite being 
                     undersized and doubted by most scouts, he pushed on, and he is now one of the faces of the NBA. Today, my main 
                     interest has switched to oncology, but Stephen Curry still inspires me to try to be better every day.
                   </p>
@@ -1359,10 +1363,10 @@
         - #Activities
       -->
 
-      <article class="activities" data-page="activities">
+      <article class="activities" data-page="profile">
 
         <header>
-          <h2 class="h2 article-title">Activities</h2>
+          <h2 class="h2 article-title">Profile</h2>
         </header>
 
         <section class="projects">
@@ -1696,7 +1700,7 @@
                   <img class="myImg" src="./assets/images/Activities/Other Interests/image_6487327.JPG" alt="orizon" loading="lazy"  image_list>
                 <!--</figure>-->
 
-                <h3 class="project-title">My Idol</h3>
+                <h3 class="project-title">My Role Model</h3>
                 <p class="project-category">Others</p>
                 <!--
                   <p class="project-category">Web development</p>
